test/zinc_source/compile_errors/operators/07_not_integer_keyword.zn
// expected-error: operator 'not' requires a boolean operand

fn main() {
    bad = not 1
}
